# Kolo-AI-Agent

./: .gitignore  .gitmodules  PROJECT_PLAN.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: kolo-native-ci.yml
android/: key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/kotlin/com/kolo/kolo_ai_agent/: LitertLmSmokeTestActivity.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/kolo/kolo_ai_agent/: KoloAccessibilityService.kt  KoloOverlayManager.kt  KoloScreenshotService.kt  LitertLmService.kt  MainActivity.kt
android/app/src/main/res/values/: accessibility_strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
assets/: default_system_prompt.txt
docs/: UI_POLISH_ANALYSIS.md  claude-prompt-iterative-coding.md  claude-task-dev-screen-overhaul.md  claude-task-iterative-coding.md  declutter_audit.md  native_kotlin_rebuild_plan.md  optimization_audit.md  ui_ux_polish_quirks_and_fix_plan.md
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
kolo-native/: .gitignore  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
kolo-native/app/: build.gradle.kts  proguard-rules.pro
kolo-native/app/src/androidTest/java/com/kolo/agent/: ChatScreenInstrumentedTest.kt  SettingsInstrumentedTest.kt
kolo-native/app/src/main/: AndroidManifest.xml
kolo-native/app/src/main/java/com/kolo/agent/: KoloApp.kt  MainActivity.kt
kolo-native/app/src/main/java/com/kolo/agent/di/: DatabaseModule.kt  ProviderModule.kt  SettingsModule.kt  ToolModule.kt
kolo-native/app/src/main/res/drawable/: ic_launcher_foreground.xml
kolo-native/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
kolo-native/app/src/main/res/xml/: accessibility_service_config.xml
kolo-native/artifacts/ui/: settings_hierarchy.xml
kolo-native/core/agent/: build.gradle.kts
kolo-native/core/agent/src/main/java/com/kolo/agent/core/agent/: AgentLoop.kt
kolo-native/core/database/: build.gradle.kts
kolo-native/core/database/schemas/com.kolo.agent.core.database.AppDatabase/: 1.json  2.json
kolo-native/core/database/src/main/java/com/kolo/agent/core/database/: AppDatabase.kt  Converters.kt
kolo-native/core/model/: build.gradle.kts
kolo-native/core/model/src/main/java/com/kolo/agent/core/model/: AgentEvents.kt  Ids.kt  MemoryRepository.kt  Models.kt  ProviderModels.kt
kolo-native/core/model/src/test/java/com/kolo/agent/core/model/: ModelsTest.kt
kolo-native/core/providers/: build.gradle.kts
kolo-native/core/providers/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
kolo-native/core/tools/: build.gradle.kts
kolo-native/feature/chat/: build.gradle.kts
kolo-native/feature/phonecontrol/: build.gradle.kts
kolo-native/feature/settings/: build.gradle.kts
kolo-native/gradle/: libs.versions.toml
lib/: firebase_options.dart  main.dart
lib/core/: connectivity_service.dart  haptics.dart  providers.dart  providers_state.dart  search_settings.dart  stt_service.dart  theme_provider.dart
lib/core/agent/: agent_loop.dart  agent_metrics.dart  agent_session.dart  agent_settings.dart  conversation_manager.dart  system_prompt.dart  tool_router.dart
lib/core/api/: chat_client.dart  litert_lm_client.dart  llama_cpp_client.dart  model_fetcher.dart  openai_client.dart  provider.dart  provider_manager.dart  shared_dio.dart  streaming_parser.dart
lib/core/bootstrap/: bootstrap_service.dart  bootstrap_utils.dart
lib/core/folders/: folder_service.dart
lib/core/llm/: hf_service.dart  litert_lm_provider.dart  litert_lm_service.dart  llama_server_provider.dart  llama_server_service.dart
lib/core/memory/: memory_service.dart  memory_tools.dart
lib/core/outbox/: outbox_service.dart
lib/core/permissions/: permission_manager.dart
lib/core/prompts/: prompt_library.dart
lib/core/storage/: database.dart
lib/core/tools/: create_tool_tool.dart  custom_tool_adapter.dart  custom_tool_def.dart  custom_tools_state.dart  skills.dart  tool_base.dart  tool_bootstrap.dart  tool_registry.dart  tools.dart
lib/core/tools/android/: adb_phone_controller.dart  adb_utils.dart  analyze_screen.dart  app_launcher.dart  bootstrap_status_tool.dart  phone_control_mode.dart  phone_control_overlay.dart  phone_controller.dart  scan_phone_apps.dart  vlm_analyzer.dart
lib/core/tools/cross_platform/: calculator.dart  clipboard.dart  contacts.dart  device_tools.dart  download_file.dart  edit_file.dart  flutter_task.dart  list_directory.dart  location.dart  new_tools.dart  open_app.dart  project_tools.dart  qr_code.dart  read_file.dart  search_files.dart  speech_to_text.dart  text_to_speech.dart  timer.dart  web_cache.dart  web_scrape.dart  web_search.dart  write_file.dart
lib/core/ui/: toast.dart
lib/ui/chat/: breathing_icon.dart  chat_message_ui.dart  chat_screen.dart  chat_search_screen.dart  date_separator.dart  input_bar.dart  message_bubble.dart  prompt_library_sheet.dart  scroll_to_bottom_fab.dart  slide_in_message.dart  tool_result_card.dart  typing_indicator.dart
lib/ui/dev/: dev_screen.dart
lib/ui/onboarding/: onboarding_screen.dart
lib/ui/settings/: hf_browser_screen.dart  litert_lm_section.dart  local_model_section.dart  settings_screen.dart  tools_permission_screen.dart
lib/ui/shared/: metrics_chip.dart  page_transitions.dart  phone_control_overlay.dart  shimmer.dart
scripts/: fetch_termux_packages.py
test/: bootstrap_utils_test.dart  chat_message_ui_test.dart  core_test.dart  custom_tool_adapter_test.dart  custom_tools_test.dart  database_sqlite_test.dart  hf_service_test.dart  memory_tools_test.dart  provider_kind_test.dart  search_settings_test.dart  token_estimate_test.dart  token_usage_test.dart  widget_test.dart
test/helpers/: test_harness.dart
test/widget/: theme_toggle_test.dart
tool/: coverage_gate.dart
tools/litert/: REPORT.md  build_g5_package.py  convert_and_aot.py  graph_reduce.py  run_matrix_tests.sh  run_on_p520.sh
(+63 files in other folders)
